cabal-version: 2.4
name:          advent2019
version:       0.1.0.0
license:       MIT
author:        Connor James
build-type:    Simple

common deps
  build-depends:
    , base        ^>=4.12
    , containers  ^>=0.6.0.1
    , mtl         ^>=2.2.2
    , polysemy    ^>=1.2.1
    , split       ^>=0.2.3.3
    , vector      ^>=0.12.0.3

  default-language:   Haskell2010
  default-extensions: ScopedTypeVariables
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

library
  import:          deps

  -- cabal-fmt: expand common
  exposed-modules:
    Common
    IntCode

  hs-source-dirs:  common

common day
  import:         deps
  hs-source-dirs: src
  build-depends:  advent2019

executable day1
  import:  day
  main-is: Day1.hs

executable day2
  import:  day
  main-is: Day2.hs

executable day3
  import:  day
  main-is: Day3.hs

executable day4
  import:  day
  main-is: Day4.hs

executable day5
  import:  day
  main-is: Day5.hs

executable day6
  import:  day
  main-is: Day6.hs

executable day7
  import:  day
  main-is: Day7.hs

executable day8
  import:  day
  main-is: Day8.hs

executable day9
  import:  day
  main-is: Day9.hs
